--- a/MauiMathsApp/AppShell.xaml
+++ b/MauiMathsApp/AppShell.xaml
@@ -6,9 +6,6 @@
     xmlns:local="clr-namespace:MauiMathsApp"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <ShellContent ContentTemplate="{DataTemplate local:MainPage}" Route="MainPage" />
 
 </Shell>
