--- a/MauiMathsApp/MainPage.xaml
+++ b/MauiMathsApp/MainPage.xaml
@@ -28,14 +28,27 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Text="Addition" />
-                <Button Grid.Column="1" Text="Substraction" />
-                <Button Grid.Column="2" Text="Multiplication" />
-                <Button Grid.Column="3" Text="Division" />
+                <Button
+                    Grid.Column="0"
+                    Clicked="OnGameChosen"
+                    Text="Addition" />
+                <Button
+                    Grid.Column="1"
+                    Clicked="OnGameChosen"
+                    Text="Substraction" />
+                <Button
+                    Grid.Column="2"
+                    Clicked="OnGameChosen"
+                    Text="Multiplication" />
+                <Button
+                    Grid.Column="3"
+                    Clicked="OnGameChosen"
+                    Text="Division" />
                 <Button
                     Grid.Row="1"
                     Grid.ColumnSpan="4"
                     BackgroundColor="ForestGreen"
+                    Clicked="OnPreviousGameChosen"
                     Text="View Previous Games" />
             </Grid>
         </VerticalStackLayout>
