--- a/MauiMathsApp/Views/GamePage.xaml
+++ b/MauiMathsApp/Views/GamePage.xaml
@@ -4,10 +4,32 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="GamePage">
-    <VerticalStackLayout>
+
+    <VerticalStackLayout Padding="100" Spacing="25">
+
         <Label
+            x:Name="QuestionLabel"
+            FontSize="36"
             HorizontalOptions="Center"
-            Text="{Binding GameType}"
             VerticalOptions="Center" />
+
+        <Entry x:Name="Answer" HorizontalOptions="Center" />
+
+        <Button
+            x:Name="SubmitAnswer"
+            Clicked="SubmitAnswer_Clicked"
+            HorizontalOptions="Center"
+            Text="Answer" />
+
+        <Label
+            x:Name="AnswerLabel"
+            HorizontalOptions="Center"
+            VerticalOptions="Center" />
+
+        <Label
+            x:Name="GameOverLabel"
+            HorizontalOptions="Center"
+            VerticalOptions="Center" />
+
     </VerticalStackLayout>
 </ContentPage>
