--- a/MauiMathsApp/Views/PreviousGames.xaml
+++ b/MauiMathsApp/Views/PreviousGames.xaml
@@ -2,44 +2,60 @@
 <ContentPage
     x:Class="MauiMathsApp.PreviousGames"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    BackgroundImageSource="background1.jpg">
 
     <ScrollView>
-        <VerticalStackLayout Padding="100">
+        <VerticalStackLayout Padding="50,100,50,50">
+            <Grid ColumnDefinitions="*,*,*,*" RowDefinitions="50">
+                <Label
+                    Grid.Column="0"
+                    FontSize="32"
+                    HorizontalTextAlignment="Center"
+                    Text="Date"
+                    TextColor="Red" />
+                <Label
+                    Grid.Column="1"
+                    FontSize="32"
+                    HorizontalTextAlignment="Center"
+                    Text="Type"
+                    TextColor="Red" />
+                <Label
+                    Grid.Column="2"
+                    FontSize="32"
+                    HorizontalTextAlignment="Center"
+                    Text="Score"
+                    TextColor="Red" />
+            </Grid>
             <CollectionView x:Name="gamesList">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="40" />
-                            </Grid.RowDefinitions>
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*" />
-                                <ColumnDefinition Width="2*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="2*" />
-                            </Grid.ColumnDefinitions>
+                        <Grid ColumnDefinitions="*,*,*,*" RowDefinitions="50">
 
                             <Label
                                 Grid.Column="0"
-                                FontSize="16"
+                                FontSize="24"
+                                HorizontalTextAlignment="Center"
                                 Text="{Binding DatePlayed, StringFormat='{0:d}'}" />
                             <Label
                                 Grid.Column="1"
-                                FontSize="16"
+                                FontSize="32"
+                                HorizontalTextAlignment="Center"
                                 Text="{Binding Type}" />
                             <Label
                                 Grid.Column="2"
-                                FontSize="16"
+                                FontSize="32"
+                                HorizontalTextAlignment="Center"
                                 Text="{Binding Score}" />
-                            <Button
+                            <ImageButton
                                 x:Name="DeleteBtn"
                                 Grid.Column="3"
                                 BindingContext="{Binding Id}"
+                                BorderColor="Black"
                                 Clicked="DeleteBtn_Clicked"
-                                Text="Delete" />
+                                MinimumHeightRequest="40"
+                                MinimumWidthRequest="70"
+                                Source="trash.png" />
 
                         </Grid>
                     </DataTemplate>
